fix: area details dark mode

--- a/src/app/components/locations/area-details/area-details.component.css
+++ b/src/app/components/locations/area-details/area-details.component.css
@@ -1,4 +1,4 @@
-.container {
+.main-container {
   width: calc(95% - 5%);
   margin: 2.5%;
   background-color: white;
